apply plugin: 'java'
apply plugin: 'application'
apply plugin: "com.github.ben-manes.versions"

buildscript {

    repositories {
        jcenter()
    }

    dependencies {
        classpath "com.github.ben-manes:gradle-versions-plugin:0.28.0"
    }
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

version = '1.5.5'

repositories {
     jcenter()
}

dependencies {

    implementation 'commons-digester:commons-digester:2.1'
    implementation 'org.apache.commons:commons-email:1.5'
    implementation 'org.apache.velocity:velocity:1.7'
    implementation 'joda-time:joda-time:2.10.5'
    implementation 'commons-cli:commons-cli:1.4'

    testImplementation 'junit:junit:4.13'
}

mainClassName = "com.munzenberger.feed.App"

tasks.withType(JavaCompile) {
    options.compilerArgs << '-Xlint:unchecked'
    options.deprecation = true
}

task createProperties(dependsOn: processResources) {
    doLast {
        new File("$buildDir/resources/main/version.properties").withWriter { w ->
            Properties p = new Properties()
            p['version'] = project.version.toString()
            p.store w, null
        }
    }
}

classes {
    dependsOn createProperties
}
